# Rotom

./: .flake8  .gitignore  .pre-commit-config.yaml  CONV2D_TEST_SUMMARY.md  LICENSE  README.md  e2e.py  layout_visualizer.py  main.py  parse_logs.py  pyproject.toml  pytest.ini  requirements.txt  run_all_tests.py  terminal-5-lines-17-19.txt  test.py
.github/workflows/: ci.yml  nightly.yml  pages.yml
assignment/: alignment.py  assignment.py  frontend_layout.py  layout_strategy.py  strategy_loader.py  writer.py
backends/: __init__.py  heir.py  openfhe_backend.py  toy.py
backends/heir/: README.md  heir.py  mlir_interpreter.py
benchmarks/microbenchmarks/: conversion.py  double_matmul.py  double_matmul_32.py  roll.py  rot_roll.py  slot_bsgs_roll.py  slot_conversion.py  slot_roll.py  strassens.py  ttm_micro.py  ttm_micro_32.py
benchmarks/rotom_benchmarks/: bert_attention.py  bert_attention_32768.py  convolution.py  convolution_32768.py  distance.py  logreg.py  mlp_mnist.py  mlp_mnist_heir.py  mlp_mnist_square.py  resnet_silu.py  retrieval.py  ttm.py
data/: HEOp.PACK 0 KernelOp.TENSOR: a [0:2:8][1:2:8];[1:8:1][0:8:1].txt  HEOp.PACK 0 KernelOp.TENSOR: b [0:2:8][1:2:8];[0:8:1][1:8:1].txt  HEOp.PACK 1 KernelOp.TENSOR: a [0:2:8][1:2:8];[1:8:1][0:8:1].txt  HEOp.PACK 1 KernelOp.TENSOR: b [0:2:8][1:2:8];[0:8:1][1:8:1].txt  HEOp.PACK 2 KernelOp.TENSOR: a [0:2:8][1:2:8];[1:8:1][0:8:1].txt  HEOp.PACK 2 KernelOp.TENSOR: b [0:2:8][1:2:8];[0:8:1][1:8:1].txt  HEOp.PACK 3 KernelOp.TENSOR: a [0:2:8][1:2:8];[1:8:1][0:8:1].txt  HEOp.PACK 3 KernelOp.TENSOR: b [0:2:8][1:2:8];[0:8:1][1:8:1].txt  result_0.txt  result_1.txt  result_2.txt  result_3.txt
docs/: gen_docs.py  serve_docs.py
evolve_openevolve/: bench_worker.py  config.yaml  evaluator.py  layout_transform_config.yaml  layout_transform_evaluator.py  layout_transform_lib.py  layout_transform_program.py  layout_transform_search.py  matmul_layout_config.yaml  matmul_layout_evaluator.py  matmul_layout_explore.py  matmul_layout_program.py  verify.sh
frontends/: __init__.py  poly.py  rotom_pytorch.py  silu_poly.py  tensor.py  tensor_args.py  tensor_evaluator.py
ir/: __init__.py  dim.py  he.py  kernel.py  kernel_cost.py  kernel_cost_base.py  kernel_cost_conv.py  kernel_cost_matmul.py  kernel_cost_roll.py  layout.py  layout_utils.py  roll.py
lower/: circuit_loader.py  circuit_serializer.py  fhe_term.py  layout_cts.py  lower.py  lower_add.py  lower_avg_pool2d.py  lower_cast.py  lower_combine.py  lower_compact.py  lower_concat.py  lower_const.py  lower_conv2d.py  lower_conv2d_roll.py  lower_conv3d.py  lower_conversion.py  lower_cs_pack.py  lower_cumsum.py  lower_elementwise.py  lower_index.py  lower_mask_tensor.py  lower_matmul.py  lower_mean.py  lower_mul.py  lower_permute.py  lower_poly.py  lower_poly_call.py  lower_product.py  lower_reorder.py  lower_replicate.py  lower_rescale.py  lower_reshape.py  lower_roll.py  lower_select.py  lower_sub.py  lower_sum.py  lower_tensor.py  lower_tile.py  lower_toeplitz_conv2d.py  lower_toeplitz_tensor.py  (+2 more)
opt/: __init__.py  bsgs_matmul.py  ct_roll_bsgs.py  layout_hoisting.py  opt.py  pack_tensor_lifting.py  replication_hoisting.py  roll_propagation.py  roll_reordering.py  rot_roll.py  strassens.py
plots/: compile.py  exec.py
scripts/: bench_resnet_silu_layer_full_28g.sh  debug_bsgs_small.py  debug_bsgs_trace.py  debug_matvecmul_1x784_784x512.py  debug_matvecmul_dimensions.py  debug_mnist_layer_by_layer.py  parse_logs.py  plot_compile.py
tests/: conftest.py  test_add.py  test_apply_layout.py  test_apply_layout_util.py  test_avg_pool2d_native_toy.py  test_avg_pool2d_toy.py  test_bert_attention.py  test_bert_attention_small.py  test_circuit_serialization.py  test_compact.py  test_concat_toy.py  test_conv2d.py  test_conv2d_detailed.py  test_conv2d_groups.py  test_conv2d_resnet_l3_layout_regression.py  test_conv2d_split_channel_input_layout.py  test_conv3d.py  test_conv_compaction_fixed_point.py  test_cumsum_toy.py  test_double_matmul_ct_pt.py  test_frontend_layout_assignment.py  test_hard_swish_toy.py  test_index.py  test_index_matmul.py  test_index_slice_toy.py  test_layout_dim_segment.py  test_layout_replication.py  test_layout_simplicity.py  test_layout_transform_harness.py  test_lola_mnist_layers.py  test_matmul_add.py  test_matmul_ct_ct.py  test_matmul_ct_pt.py  test_matmul_ct_pt_pytorch.py  test_matmul_layout_explore.py  test_matmul_ttm.py  test_matvecmul_ct_pt.py  test_matvecmul_pt_ct.py  test_mlir_interpreter.py  test_mnist_poly_accuracy.py  (+14 more)
util/: benchmark_layout_plan_cache.py  checker.py  fuzz.py  input_serializer.py  kernel_util.py  layout_simplicity.py  layout_util.py  parse_layout.py  parse_logs.py  shape_util.py  silu_polycall_eval.py  util.py
website/: README.md  index.html  rotom_layout.js  server.py  visualizer.html
wrappers/: fhelipe_wrapper.py  viaduct_wrapper.py
(+91 files in other folders)
